# CSCI-5607-Final-Virtual-Reality

./: .gitignore  .gitmodules  README.md
MazeGame/: CMakeLists.txt  MazeGame.sln
MazeGame/MazeGame/: .clang-format  LitCube.cpp  MazeGame.cpp  MazeGame.vcxproj  MazeGame.vcxproj.filters  Triangle.cpp  bounding_box.cpp  bounding_box.h  camera.cpp  camera.h  companionWindow-Fragment.glsl  companionWindow-Vertex.glsl  constants.h  controller.cpp  controller.h  door.cpp  door.h  fractal.h  game_object.cpp  game_object.h  goal.cpp  goal.h  hellovr_opengl_main.cpp  key.cpp  key.h  map.cpp  map.h  map1.txt  map2.txt  map_loader.cpp  map_loader.h  material.cpp  material.h  mazegame_actions.json  mazegame_bindings_holographic_controller.json  mazegame_bindings_vive_controller.json  model.cpp  model.h  model_manager.cpp  model_manager.h  (+23 more)
MazeGame/MazeGame/shared/: pathtools.cpp  strtools.cpp
